--- a/website/WebApplication4/Views/NguoiDung/TrangChuNguoiDung.cshtml
+++ b/website/WebApplication4/Views/NguoiDung/TrangChuNguoiDung.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="~/css/TrangChuNguoiDung.css" />
+﻿<link rel="stylesheet" href="~/css/NguoiDung/TrangChuNguoiDung.css" />
 
 <main class="container">
     <div class="dashboard-layout">
