--- a/website/WebApplication4/Views/NguoiDung/_CapNhatMatKhau.cshtml
+++ b/website/WebApplication4/Views/NguoiDung/_CapNhatMatKhau.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <link rel="stylesheet" href="~/css/NguoiDung/CapNhatMatKhau.css" />
-<main class="main-content">
+<main>
     <h2>🔑 Thay Đổi Mật Khẩu</h2>
 
     <p class="desc">
