--- a/website/WebApplication4/Views/NguoiDung/_MyDonHang.cshtml
+++ b/website/WebApplication4/Views/NguoiDung/_MyDonHang.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <link rel="stylesheet" href="~/css/NguoiDung/MyDonHang.css" />
-<section class="main-content">
+<section >
     <h2>📦 Đơn Hàng Của Tôi</h2>
 
     <div class="order-filter">
@@ -30,7 +30,7 @@
         <div class="order-body">
             <div class="order-item-list">
                 <div class="order-item">
-                    <img src="https://via.placeholder.com/60x60?text=ADIDAS" alt="Giày Adidas">
+                    <img src="#" alt="Alternate Text" />
                     <div class="item-details">
                         <p>Giày Adidas Runner X Pro</p>
                         <p>Size: 41 | Số lượng: 1</p>
@@ -64,7 +64,7 @@
         <div class="order-body">
             <div class="order-item-list">
                 <div class="order-item">
-                    <img src="https://via.placeholder.com/60x60?text=NIKE" alt="Giày Nike">
+                    <img src="#" alt="Alternate Text" />
                     <div class="item-details">
                         <p>Nike Air Max Lite</p>
                         <p>Size: 37 | Số lượng: 1</p>
@@ -98,7 +98,7 @@
         <div class="order-body">
             <div class="order-item-list">
                 <div class="order-item">
-                    <img src="https://via.placeholder.com/60x60?text=HAT" alt="Mũ Lưỡi Trai">
+                    <img src="#" alt="Alternate Text" />
                     <div class="item-details">
                         <p>Mũ Lưỡi Trai Logo Nổi</p>
                         <p>Màu: Đỏ | Số lượng: 2</p>
