--- a/website/WebApplication4/Views/NguoiDung/_ThongTinNguoiDung.cshtml
+++ b/website/WebApplication4/Views/NguoiDung/_ThongTinNguoiDung.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <link rel="stylesheet" href="~/css/NguoiDung/ThongTinNguoiDung.css" />
-<section class="main-content">
+<section >
     <h2>📝 Thông Tin Cá Nhân</h2>
 
     <p style="margin-bottom: 30px; color: #777;">Quản lý thông tin hồ sơ của bạn để mua sắm dễ dàng hơn.</p>
