--- a/website/WebApplication4/Views/Shared/Components/SanPham/Default.cshtml
+++ b/website/WebApplication4/Views/Shared/Components/SanPham/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<WebApplication4.Models.Product>
 <div class="product-card">
-    <img src="https://via.placeholder.com/300x200?text=ADIDAS+RUNNER+X" alt="Giày Adidas Runner X">
+    <img src="#" alt="Alternate Text" />
     <h3><a href="#">Adidas Runner X Pro</a></h3>
     <p>Màu: Đen/Trắng | Size: 40-44</p>
     <div class="price">2.490.000 VNĐ</div>
