--- a/website/WebApplication4/Views/Shared/_Header.cshtml
+++ b/website/WebApplication4/Views/Shared/_Header.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="container header-content">
+﻿
+<div class="container header-content">
     <div class="logo">
         <a href="#">SNEAKER CITY</a>
     </div>
