--- a/website/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/website/WebApplication4/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNEAKER CITY | Giày Thể Thao Cao Cấp</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/Website/style.css" />
 </head>
 <body>
     <header class="header">@Html.Partial("_Header")</header>
