--- a/website/WebApplication4/wwwroot/css/NguoiDung/SoDiaChi.css
+++ b/website/WebApplication4/wwwroot/css/NguoiDung/SoDiaChi.css
@@ -1,22 +1,4 @@
-﻿* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Segoe UI", sans-serif;
-}
-
-body {
-    background-color: #fafafa;
-    color: #333;
-    line-height: 1.6;
-}
-
-.container {
-    width: 90%;
-    max-width: 900px;
-    margin: 20px auto;
-}
-
+﻿
 .header {
     border-bottom: 2px solid #e0e0e0;
     padding: 20px 0;
