--- a/website/WebApplication4/Views/Shared/_Menu.cshtml
+++ b/website/WebApplication4/Views/Shared/_Menu.cshtml
@@ -2,12 +2,12 @@
     <h2 style="text-align: center; padding: 10px 0; border-bottom: 1px solid #34495e;">SNEAKER CITY</h2>
     <a href="#dashboard"><i class="fas fa-home"></i> Dashboard</a>
     <a asp-action="QuanLiBaiViet" asp-controller="Admin"><i class="fas fa-blog"></i> Quản Lý Blog</a>
-    <a href="#products"><i class="fas fa-box"></i> Quản Lý Sản Phẩm</a>
-    <a href="#categories"><i class="fas fa-tags"></i> Danh Mục</a>
-    <a href="#orders"><i class="fas fa-shopping-cart"></i> Đơn Hàng</a>
-    <a href="#comments"><i class="fas fa-comments"></i> Quản Lý Bình Luận</a>
-    <a href="#users"><i class="fas fa-users"></i> Quản Lý Người Dùng</a>
+    <a asp-action="QuanLiSanPham" asp-controller="Admin"><i class="fas fa-box"></i> Quản Lý Sản Phẩm</a>
+    <a asp-action="QuanLiDanhMuc" asp-controller="Admin"><i class="fas fa-tags"></i> Danh Mục</a>
+    <a asp-action="QuanLiDonHang" asp-controller="Admin"><i class="fas fa-shopping-cart"></i> Đơn Hàng</a>
+    <a asp-action="BinhLuan" asp-controller="Admin"><i class="fas fa-comments"></i> Quản Lý Bình Luận</a>
+    <a asp-action="QuanLiNguoiDung" asp-action="Admin"><i class="fas fa-users"></i> Quản Lý Người Dùng</a>
     <a asp-action="CaiDatWebsite" asp-controller="Admin"><i class="fas fa-cog"></i> Cài Đặt Chung</a>
-    <a href="#account" style="background-color: #34495e;"><i class="fas fa-user-circle"></i> Tài Khoản Cá Nhân</a>
+    <a asp-action="TaiKhoanCaNhan" asp-controller="Admin" style="background-color: #34495e;"><i class="fas fa-user-circle"></i> Tài Khoản Cá Nhân</a>
     <a href="#logout"><i class="fas fa-sign-out-alt"></i> Đăng Xuất</a>
 </div>
